<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessStorage_message1">Storage access is needed.</string>
    <string name="accessStorage_message2">In App info, Please grant permissions.</string>
    <string name="accessStorage_title">Location Permission</string>
    <string name="accidentalDisconnectMessage">Reconnect?</string>
    <string name="accidentalDisconnectTitle">Disconnected</string>
    <string name="appModel">integra</string>
    <string name="appResetMessage">Do you want to reset the setting ?\n※ Settings stored in the device will not be reset.\n※ After reset, app will disconnect from device.</string>
    <string name="appResetTitle" />
    <string name="appVersion">Version:</string>
    <string name="appVersionNumber">2.2.3</string>
    <string name="app_name">Integra</string>
    <string name="cancel">Cancel</string>
    <string name="cecIsOff">CEC is off</string>
    <string name="cecOn">CEC On</string>
    <string name="cecRouteIsNotMain">CEC for Zone 2 is on.\nPlease change CEC setting to main zone from the setup of your device.</string>
    <string name="cecRouteIsNotZone2">CEC for main zone is on.\nPlease change CEC route setting to zone2 from the setup of your device.</string>
    <string name="close">Close</string>
    <string name="connectFailedMessage">Unable to connect to the device</string>
    <string name="connectFailedTitle">Connection failed</string>
    <string name="connectTimeoutMessage">Device did not respond</string>
    <string name="connectTimeoutTitle">Connected</string>
    <string name="connectToOtherDevice">Change device</string>
    <string name="connecting">Connecting</string>
    <string name="ctrlCdFolder">Folder</string>
    <string name="ctrlCdTrack">Track</string>
    <string name="ctrlHdmiPlayerTitle">Player (CEC Control)</string>
    <string name="ctrlHdmiTvMultiDsTitle">%s TV (CEC Control)</string>
    <string name="ctrlHdmiTvTitle">TV (CEC Control)</string>
    <string name="ctrlRiCdPlayerTitle">CD Player (RI Control)</string>
    <string name="ctrlTunerNoPreset">No Preset</string>
    <string name="ctrlTunerPreset">Preset</string>
    <string name="ctrlTunerPresetMemory">Memory</string>
    <string name="demoMode">Demonstration mode</string>
    <string name="deviceSearching">Searching for device</string>
    <string name="full_app_name">Integra Remote</string>
    <string name="goto_appinfo">Go to App info</string>
    <string name="iPod_Album">Album</string>
    <string name="iPod_Artist">Artist</string>
    <string name="iPod_Genres">Genre</string>
    <string name="iPod_Playlist">Playlists</string>
    <string name="iPod_Songs">Songs</string>
    <string name="inStandbyMode">Device in Standby</string>
    <string name="inputSet">SET</string>
    <string name="input_album">Album Name:</string>
    <string name="input_artist">Artist Name:</string>
    <string name="input_artistOrSong">Artist or Title:</string>
    <string name="input_episode">Episode:</string>
    <string name="input_password">Password:</string>
    <string name="input_pinCode">PIN Code:</string>
    <string name="input_song">Title:</string>
    <string name="input_station">Station Name:</string>
    <string name="input_tag">Tag Name:</string>
    <string name="input_url">URL:</string>
    <string name="input_userName">User Name:</string>
    <string name="langCode" />
    <string name="listeningMode">LISTENING MODE</string>
    <string name="lmNoAudio" />
    <string name="musicOpt">MUSIC OPTIMIZER</string>
    <string name="muting">Muting</string>
    <string name="netLoginError">Login failed</string>
    <string name="netNonControllable">Please operate the device.</string>
    <string name="netOldModelNotify">Please operate by Remote screen</string>
    <string name="netStandby">Network Standby</string>
    <string name="netStandbyAdvice">If you want to power on your device from the App, please turn on Network Standby</string>
    <string name="netStandbyOffMessage">Once the device is in standby, App will disconnect from device and you would need to turn on manually</string>
    <string name="netStandbyOffTitle">Network Standby is turned off.</string>
    <string name="netStandbyUnsupportedNotify">Once the device is in standby, App will disconnect from device and you would need to turn on manually</string>
    <string name="networkService">Music Streaming</string>
    <string name="newApp_UseNewApp_I">Please use Integra Control Pro.</string>
    <string name="newApp_UseNewApp_O">Please use Onkyo Controller.</string>
    <string name="newApp_UseNewApp_P">Please use Pioneer Remote App.</string>
    <string name="newApp_askInstall">Install ?</string>
    <string name="newApp_askLaunch_I">Launch Integra Control Pro ?</string>
    <string name="newApp_askLaunch_O">Launch Onkyo Controller ?</string>
    <string name="newApp_askLaunch_P">Launch Pioneer Remote App ?</string>
    <string name="newApp_availableOnAppStore">There is new App available on the App Store.</string>
    <string name="newApp_availableOnGooglePlay">There is new App available on Google Play.</string>
    <string name="newApp_deviceNotSupported">The device you have can not be operated by this app.</string>
    <string name="no">No</string>
    <string name="noContent">No Content</string>
    <string name="noDeviceButton">When not found</string>
    <string name="noDeviceHelpTitle" />
    <string name="noServer">No Server</string>
    <string name="noToneControl" />
    <string name="noWifiNetwork">No Wi-Fi Connection</string>
    <string name="nowPlaying">Now\nPlaying</string>
    <string name="ok">OK</string>
    <string name="open">Launch</string>
    <string name="playerRemoteControlCecIsOff">You need to turn on the CEC to operate the player connected by HDMI</string>
    <string name="pmb">PHASE MATCHING BASS</string>
    <string name="preoutOrFixed">Preout ( Fixed )</string>
    <string name="queryTunerPreset">Getting preset info</string>
    <string name="reconnect">Reconnect</string>
    <string name="researchByDownSwipe">Pull down to search again</string>
    <string name="reset">Reset</string>
    <string name="resetNetworkServiceSetting">Reset to default</string>
    <string name="resetSelectorInfo">Reset to default</string>
    <string name="restrictionConfirm">Confirm restriction</string>
    <string name="restrictionMessage">Some operations are restricted on this device. For details, please confirm the model year of your device via Settings</string>
    <string name="retry">Retry</string>
    <string name="search_AlbumName">Albums</string>
    <string name="search_MusicTitle">Titles</string>
    <string name="search_NotFound">No Result</string>
    <string name="search_menu_title">Search</string>
    <string name="searchingForDevice">Searching for a device</string>
    <string name="selectOtherDevice">Select other device</string>
    <string name="selectServer">Select other</string>
    <string name="selector">Input Selector</string>
    <string name="serverSelectDialogTitle">Select device</string>
    <string name="set">Set</string>
    <string name="spBalance">BALANCE</string>
    <string name="spLevelCenter">CENTER CHANNEL LEVEL</string>
    <string name="spLevelSw">SUBWOOFER LEVEL</string>
    <string name="spLevelSw1">SUBWOOFER1 LEVEL</string>
    <string name="spLevelSw2">SUBWOOFER2 LEVEL</string>
    <string name="standbyAndDoNotShowAgain">Standby</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="std_modelYearRestrictionTitle">Restrictions based on model year</string>
    <string name="stg_appStg">App Settings</string>
    <string name="stg_autoConnect">Auto Connect</string>
    <string name="stg_deviceInfo">Device Information</string>
    <string name="stg_deviceStg">Device Settings</string>
    <string name="stg_displayName">Display Name</string>
    <string name="stg_inputSelector">Input Selector</string>
    <string name="stg_ipAddress">IP Address</string>
    <string name="stg_licenseInfo">License Information</string>
    <string name="stg_modelName">Model</string>
    <string name="stg_modelYear">Model year</string>
    <string name="stg_networkService">Music Streaming</string>
    <string name="stg_resetApp">Reset App</string>
    <string name="stg_root">Settings</string>
    <string name="stg_selectIcon">Select Icon</string>
    <string name="stg_selectZone">Select Zone</string>
    <string name="stg_selectorStg">Input Selector</string>
    <string name="stg_version">Version</string>
    <string name="stg_zone">Zone</string>
    <string name="stg_zoneNameStg">Zone Name</string>
    <string name="tb_audio">Audio</string>
    <string name="tb_remote">Remote</string>
    <string name="tb_volume">Volume</string>
    <string name="thisDeviceService">My Smartphone</string>
    <string name="tips">Tip!\n</string>
    <string name="tipsArtworkTap">If you tap here, you can get the contents information and seek the song.</string>
    <string name="tipsMessage_tipsSelector">Tap this button to change input selector or choose music streaming</string>
    <string name="tipsMessage_tipsSidebar">If you tap this button, you can\n・Power ON/OFF\n・Change Zone selector\n・Change the device</string>
    <string name="tipsMessage_tipsSpotifyConnect">Tap this icon to launch the Spotify Music App</string>
    <string name="tipsTitle_tipsSelector" />
    <string name="tipsTitle_tipsSidebar" />
    <string name="tipsTitle_tipsSpotifyConnect" />
    <string name="toneBass">BASS</string>
    <string name="toneCenter">CENTER</string>
    <string name="toneDirect">TONE DIRECT</string>
    <string name="toneFront">FRONT</string>
    <string name="toneFrontHigh">FRONT HIGH</string>
    <string name="toneFrontWide">FRONT WIDE</string>
    <string name="toneSurround">SURROUND</string>
    <string name="toneSurroundBack">SURROUND BACK</string>
    <string name="toneSw">SUBWOOFER</string>
    <string name="toneTreble">TREBLE</string>
    <string name="tunerPreset">Tuner Presets</string>
    <string name="tvRemoteControlCecIsOff">You need to turn on the CEC to operate the TV connected by HDMI</string>
    <string name="whatIsNetStandby">About Network Standby</string>
</resources>