<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/audio_settings_parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/sp_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="306dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spBalance"
            style="@style/AudioSettingsTitle"/>
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:minWidth="274dp">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/audio_type"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView9"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="L"/>
            <com.onkyo.jp.onkyoremote.view.widget.StepSlideBar
                android:layout_gravity="center_vertical"
                android:id="@+id/sp_balance_seekbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                bar_drawable="@drawable/slider_bkgnd"
                thumb_drawable="@drawable/slider_thumb"
                value_drawable="@drawable/slider_value"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/audio_type"
                android:gravity="center_horizontal"
                android:layout_gravity="center_vertical"
                android:id="@+id/textView10"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="R"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/pmb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="306dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmb"
            style="@style/AudioSettingsTitle"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">
            <Switch
                android:layout_gravity="center"
                android:id="@+id/pmb_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/tone_direct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="306dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toneDirect"
            style="@style/AudioSettingsTitle"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">
            <Switch
                android:layout_gravity="center"
                android:id="@+id/tone_direct_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/music_opt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="306dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musicOpt"
            style="@style/AudioSettingsTitle"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">
            <Switch
                android:layout_gravity="center"
                android:id="@+id/music_opt_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"/>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/no_tone_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="306dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_gravity="center"
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noToneControl"/>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
