<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/sidebar_bkgnd"
    android:padding="8dp"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:minWidth="300dp">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/device_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="8dp"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="18sp"
                android:textColor="@color/sidebar_device_name"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:id="@+id/device_name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DeviceName"
                android:lines="1"
                android:layout_weight="1"/>
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp"
                android:textColor="@color/sidebar_model_name"
                android:id="@+id/model_name_label"
                android:visibility="visible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ModelName"
                android:layout_weight="1"/>
        </LinearLayout>
        <com.onkyo.jp.onkyoremote.view.widget.GlowImageButton
            android:layout_gravity="center_vertical"
            android:id="@+id/info_button"
            android:background="@color/clear"
            android:visibility="visible"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/info"/>
    </LinearLayout>
    <ScrollView
        android:layout_gravity="center_horizontal"
        android:id="@+id/sidebar_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/sidebar_item_parent_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <FrameLayout
                android:id="@+id/net_standby_switch_cell"
                android:background="@color/sidebar_zone_bkgnd"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:minHeight="64dp">
                <View
                    android:background="@drawable/sidebar_separator_colors"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:minHeight="1dp"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="14dp"
                    android:textColor="@color/sidebar_zone_name_colors"
                    android:ellipsize="end"
                    android:id="@+id/zone_name_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/netStandby"
                    android:textIsSelectable="false"/>
                <Switch
                    android:layout_gravity="center"
                    android:id="@+id/net_standby_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/net_standby_notify_cell"
                android:background="@color/sidebar_zone_bkgnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:background="@drawable/sidebar_separator_colors"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:minHeight="1dp"/>
                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textSize="14sp"
                    android:textColor="@color/sidebar_net_standby_desc"
                    android:layout_gravity="top|left"
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/netStandbyAdvice"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/about_net_standby_cell"
                android:background="@color/sidebar_zone_bkgnd"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:minHeight="64dp">
                <View
                    android:background="@drawable/sidebar_separator_colors"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:minHeight="1dp"/>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:minHeight="64dp">
                    <Button
                        android:textSize="14sp"
                        android:textColor="@color/sidebar_net_standby_desc"
                        android:layout_gravity="top"
                        android:id="@+id/about_net_standby_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whatIsNetStandby"
                        android:textAllCaps="false"
                        style="?android:attr/borderlessButtonStyle"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            android:textColor="@color/sidebar_other_device"
            android:layout_gravity="center"
            android:id="@+id/change_device_button"
            android:background="@drawable/change_device_button"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:text="@string/connectToOtherDevice"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"/>
    </FrameLayout>
</LinearLayout>
